# natural-pdf

./: .gitignore  .pre-commit-config.yaml  01-execute_notebooks.py  404.html  CHANGELOG.md  CLAUDE.md  COMPOSITION.md  MANIFEST.in  PLAN.md  README.md  SPEC.md  TODO-args-fix.txt  audit_packaging.py  debug_report_all_pages.html  doc_coverage.json  execute_notebooks.py  index.html  llms.txt  mkdocs.yml  noxfile.py  objects.inv  publish.sh  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: ci.yml  docs.yml  nightly-tutorials.yml
api/: index.html
architecture/: index.html
benchmark/: __init__.py  __main__.py  cache.py  config.py  extract_oklahoma_license.ipynb  progress.py  providers.py  report_generator.py  runner.py  schemas.py  utils.py
benchmark/configs/: __init__.py  arkansas_state.py  atlanta_schools.py  guides_expenses.py  hebrew_table.py  oklahoma_license.py  pennsylvania_election.py  practice_01.py  prompts.py
benchmark/notebooks/: extract_01_practice.ipynb  extract_arkansas_state.ipynb  extract_atlanta_schools.ipynb  extract_oklahoma_license.ipynb
categorizing-documents/: index.html
cookbook/: index.html
cookbook/batch-processing/: index.html
cookbook/finding-sections/: index.html
cookbook/form-cells/: index.html
cookbook/guides/: index.html
cookbook/label-value-extraction/: index.html
cookbook/messy-tables/: index.html
cookbook/multi-column-layouts/: index.html
cookbook/multipage-content/: index.html
cookbook/ocr-then-navigate/: index.html
cookbook/one-page-one-row/: index.html
cookbook/structured-extraction/: index.html
cookbook/troubleshooting/: index.html
data-extraction/: index.html
describe/: index.html
docs/: index.ipynb  index.md  llms.txt
docs/api/: index.ipynb  (+1 more)
document-qa/: index.html  index.ipynb
element-selection/: index.html  index.ipynb
examples/: another_exclusion_example.py  exclusion_example.py  font_aware_example.py  font_variant_example.py  logging_example.py  region_expand_example.py  region_sections_example.py
explanations/: index.html
extracting-clean-text/: index.html  index.ipynb
finetuning/: index.html
fix-messy-tables/: index.html  index.ipynb
guide_adjustment_stream/: index.html
guides_boundary_columns/: index.html
installation/: index.html
interactive-widget/: index.html
layout-analysis/: index.html  index.ipynb
loops-and-groups/: index.html  index.ipynb
model-weights/: checkbox-nano.pt.REMOVED.git-id  read.py
natural_pdf/: __init__.py  cli.py  engine_provider.py  exceptions.py  judge.py  text_mixin.py
notebooks/: Examples.ipynb  Untitled.ipynb
ocr/: index.html
optimization/: memory_comparison.py  pdf_analyzer.py  test_cleanup_methods.py
output/: ocr_debug_page.html
pdf-navigation/: index.html
process-forms-and-invoices/: index.html
quick-reference/: index.html  index.ipynb
reflowing-pages/: index.html  index.ipynb
regions/: index.html  index.ipynb
scripts/: check_uv_run_usage.py  create_cookbook_pdfs.py  pdf-extraction-task-catalog.md  publish.sh
search/: search_index.json
tables/: index.html  index.ipynb
tests/: conftest.py  test_aggregate_selectors.py  test_alt_text.py  test_annotate.py  test_arabic_real_world.py  test_ask_extract_wrapper.py  test_attr_method.py  test_below_from_anchor.py  test_checkbox_reimpl.py  test_citations.py  test_classification_provider.py  test_classification_results.py  test_closest_substring_sorting.py  test_closest_until.py  test_closest_until_comparison.py  test_closest_until_debug.py  test_closest_until_fix.py  test_closest_until_ordering.py  test_color_hex_display.py  test_confidence.py  test_conversion_service.py  test_describe_colors.py  test_deskew_provider.py  test_directional_boundary_precision.py  test_dissolve_debug_issue.py  test_doc_coverage.py  test_document_qa.py  test_element_collection_show_cols.py  test_element_collection_slicing.py  test_element_exclusions.py  test_empty_pseudo_class.py  test_endpoint_property.py  test_engine_registry.py  test_expand.py  test_expand_enhanced.py  test_export_training_data.py  test_extract_text_words.py  test_extraction_error.py  test_extraction_text_and_vision.py  test_extraction_working.py  (+88 more)
text-analysis/: index.html  index.ipynb
text-extraction/: index.html  index.ipynb
todo/: evaluation.md
visual-debugging/: index.html
(+394 files in other folders)
